[package]
name = "double-encrypt"
version = "0.1.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
lazy_static = "1.4.0"
web-view = "0.5.4"
regex = "1.3.9"